crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_a_system_udbc0_udc00.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE a SYSTEM􀀀\"####)"
---
[
    Token {
        data: "DOCTYPE a SYSTEM\u{100000}",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
